# jugale

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Christ Han-Desic.md  LICENSE  README.md  character.json  electron-main.js  eslint.config.js  home.html  index.html  package-lock.json  package.json  preload.js  tsconfig.json  vite.config.ts
.github/agents/: dnd-5e-character-expert.agent.md  dnd-5e-warlock-tome-draconide.agent.md
.github/workflows/: android-check.yml  ci.yml  claude.yml  pages.yml  release.yml  tauri-build.yml  tauri-check.yml
characters/example-cleric/: character.json
characters/example-fighter/: character.json
characters/example-multiclass/: character.json
characters/example-sorcerer/: character.json
characters/example-warlock/: character.json
docs/: ARCHITECTURE.md  AUTOMATION.md  PROMPTS.md  RELEASE-TESTING.md  ROADMAP.md  SCHEMA.md  UI.md
js/: character-data.js  events.js  image-handler.js  main.js  state.js  storage.js  theme.js  ui-controls.js
legacy/: MODULAR_STRUCTURE.md
legacy/js/: events.js  image-handler.js  lightbox.js  portrait.js  render.js  session.js  utils.js
legacy/pg.example/: character.json
pg.example/: character.json
scripts/: android-sign-setup.sh  migrate-character.ts  set-version.sh
src/: App.test.tsx  App.tsx  characters.test.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/plugins/android-updater/: Cargo.toml  build.rs
src-tauri/plugins/android-updater/android/: build.gradle.kts  consumer-rules.pro  settings.gradle
src-tauri/plugins/android-updater/android/src/main/: AndroidManifest.xml
src-tauri/plugins/android-updater/android/src/main/java/: AndroidUpdaterPlugin.kt
src-tauri/plugins/android-updater/permissions/: default.toml  listeners.toml
src-tauri/plugins/android-updater/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: lib.rs  main.rs
src/i18n/: LanguageSwitcher.tsx  useI18n.ts
src/model/: edit.test.ts  edit.ts  factories.test.ts  factories.ts  formula.test.ts  formula.ts  skills.test.ts  skills.ts  units.test.ts  units.ts
src/prompts/: prompts.test.ts  prompts.ts
src/render/: AbilitiesSection.tsx  ActionsSection.tsx  AttacksSection.tsx  CombatSection.test.tsx  CombatSection.tsx  ConsumablesSection.tsx  CustomSection.tsx  FeaturesSection.tsx  IdentitySection.tsx  InventorySection.test.tsx  InventorySection.tsx  PortraitSection.test.tsx  PortraitSection.tsx  ResourcesSection.test.tsx  Sheet.test.tsx  (+17 more)
styles/: main.css
(+62 files in other folders)
