[package]
name = "jugale"
version = "0.1.0"
description = "JUGALE — D&D, but Digital. A character-sheet platform where character.json is the single source of truth."
authors = ["Saverio Azzato"]
license = "MIT"
repository = "https://github.com/SaverioAzzato/jugale"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jugale_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
