[package]
name = "tauri-plugin-android-updater"
version = "0.1.0"
authors = ["Saverio Azzato"]
description = "JUGALE's verified native Android APK updater"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-android-updater"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3" }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.3", features = ["build"] }
